fixing responsiveness on mobile with background positioning

--- a/src/components/pages/About/AboutHero.css
+++ b/src/components/pages/About/AboutHero.css
@@ -6,16 +6,8 @@
   z-index: -1;
 } */
 
-body {
-  /* Or the selector for your main container */
-  background-image: url("../../../../public/images/about_us/about.webp");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed; /* This ensures the background stays in place while scrolling */
-}
-
 .about-hero-container {
+  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
   height: 100vh;
   width: 100%;
   display: flex;
@@ -26,13 +18,13 @@ body {
   object-fit: contain;
 }
 
-/* .about-image {
+.about-image {
   object-fit: cover;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: -1;
-} */
+}
 
 .about-hero-container > h1 {
   color: #fff;
@@ -71,5 +63,11 @@ body {
 
   .about-hero-container > p {
     font-size: 30px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .about-hero-container {
+    width: 100%;
+    height: 85vh;
   }
 }
