--- a/src/components/pages/TeamHero/TeamHero.css
+++ b/src/components/pages/TeamHero/TeamHero.css
@@ -64,3 +64,9 @@
     font-size: 20px;
   }
 }
+@media screen and (max-width: 375px) {
+  .team-hero-container {
+    width: 100%;
+    height: 85vh;
+  }
+}
